Fixes basket collapsing into left when twitter feed is hidden

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -580,6 +580,14 @@ input[type="search"]::-webkit-search-decoration {
 	text-align: right;
 }
 
+.header-sub {
+	padding-bottom: 10px;
+}
+
+.header-twitter {
+	min-height: 1px;
+}
+
 .header-details {
 	padding: 10px 0;
 	background-color: @color-swatch3;
